test(netty): remove useless test from netty client